# directory-annotator-back

./: .clang-format  .config_unicode.yaml  .flaskenv  .gitignore  .gitlab-ci.yml  CMakeLists.txt  CMakePresets.json  Readme.md  build.md  build.sh  conanfile.py  pipeline-1.ipynb  spec.md
.gitlabci/: gcc-10  gcc-11
back/: Application.py  __init__.py  pero_ocr_driver.py  scribo.py
back/ner/: __init__.py  ner.py
cli/: batch_process.py  generate_image.py  pdf_opener.py  process_options.py  soduco_cli.py
doc/: api.md  cli.md  entry.schema.json  liste_alphabetique.csv  output-439.json  schema.json
docker/: .env-sample-deploy  .env-sample-local  README.md  deploy-debian-stable.dockerfile  deploy_storage_autofetch.dockerfile  deployer-compute.dockerfile  docker-compose-back-standalone-swarm.yml  docker-compose-standalone.yml  docker-compose.yml  docker-swarm-ro-token.txt  requirements-back-runtime.txt  requirements-peroocr.in  settings-back.cfg  settings-storage.cfg  soduco-back-cli.dockerfile  soduco-back-cppbuilder.dockerfile  soduco-back-deploy-swarm.sh
server/: __init__.py  directories.py  health_check.py  imgproc_routes.py  ner_routes.py  storage_proxy.py
sources/include/: Application.hpp  CoreTypes.hpp  display_options.hpp  scribo.hpp
sources/src/: CoreTypes.cpp  DOMBuilder_helpers.cpp  DOMBuilder_helpers.hpp  DOMEntriesExtractor.cpp  DOMEntriesExtractor.hpp  DOMLinesExtractor.cpp  Interval.cpp  Interval.hpp  TesseractTextExtraction.cpp  XYCutLayoutExtraction.cpp  api.cpp  background_substraction.cpp  clean.cpp  config.cpp  config.hpp  deskew.cpp  detect_separators.cpp  detect_separators.hpp  display.cpp  display.hpp  export.cpp  export.hpp  gaussian_directional_2d.cpp  main.cpp  pdf_tool.cpp  pdf_tool.hpp  preprocessing.cpp  process.cpp  process.hpp  region_lut.cpp  scribo-python.cpp  signal.cpp  signal.hpp  skew_estimation.cpp  subsample.cpp  subsample.hpp
sources/tests/: UTInterval.cpp
test/: conftest.py  test_server.py
test/annotations/: .gitignore
